# optimalization

./: CMakeLists.txt  README.md  main.cpp  matrix.h  opt_alg.cpp  opt_alg.h  solution.h  user_funs.cpp  user_funs.h
data/data1/: FibonacciSimulation.csv  LagrangeSimulation.csv  Optimalization.csv  data1.csv  data2.csv  data3.csv  data4.csv  data5.csv
